defense: talk rehearsal

--- a/defs.tex
+++ b/defs.tex
@@ -151,6 +151,7 @@
 
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
+\newcommand{\q}{\operatorname{Q}}
 \newcommand{\E}{\operatorname{E}}
 \newcommand{\V}{\operatorname{Var}}
 \newcommand{\med}{\operatorname{med}} % Median
